--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 /* -------  General Styles ------- */
 body {
   font-family: 'Lato', sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 h2 {
@@ -90,6 +92,8 @@ header nav ul li a:hover {
 form {
   border: 2px solid #FF385C;
   padding: 10px;
+  max-width: 800px;
+  margin: 0 auto;
 }
 
 form label {
@@ -103,8 +107,8 @@ form div {
 
 form select,
 form input {
-  margin-bottom: 20px;
-  width: 150px;
+  margin-bottom: 10px; 
+  width: 100%; 
 }
 
 form button {
@@ -129,7 +133,7 @@ footer p {
 }
 
 /* -------  Media Query ------- */
-@media all and (min-width: 469px) {
+@media all and (min-width: 768px) {
 
 
 
@@ -187,6 +191,11 @@ footer p {
 
 @media all and (min-width:786px) {
 
+  form {
+    max-width: 1000px;
+  }
+}
+
   form select,
   form input {
     width: 80%;
@@ -195,6 +204,3 @@ footer p {
   form div {
     flex-direction: column;
   }
-
-
-}
